--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,3 @@
 dependencies:
   pre:
-    - rvm @global do gem uninstall bundler -a -x
-    - rvm @global do gem install bundler -v 1.10.6
+    - gem install bundler
