fix circle yml to seed db prior to tests

--- a/circle.yml
+++ b/circle.yml
@@ -5,3 +5,4 @@ machine:
 dependencies:
   pre:
     - gem install bundler
+    - bundle exec rake db:drop db:create db:migrate db:seed RAILS_ENV=test
