--- a/circle.yml
+++ b/circle.yml
@@ -5,4 +5,5 @@ machine:
 dependencies:
   pre:
     - gem install bundler
+    - bundle install
     - bundle exec rake db:drop db:create db:migrate db:seed RAILS_ENV=test
